--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <div class="container">
+    <span data-placeolder="DEVELOPER"></span>
     <div class="row">
       <div class="col-md-4 col-xl-3 mt-3">
         <div class="card">
@@ -136,12 +137,19 @@
             <div class="col">
               <div class="vetoi mt-3">
                 <h2>About Me</h2>
-                <p>
-                  The years I sat in the school chair gave me knowledge of programming languages, knowledge of social
-                  culture to help me become a programmer, I want to learn from reality, help I grow Grow faster on the
-                  path chosen. I want to create good, useful products for everyone
-                </p>
+               
+                <p>Ability to work as individual as well as in group.</p>
+                <p>Ability to work under high pressure situations</p>
+                <p>Ready to learn new technologies and methods to improve myself (or my skills)</p>
               </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <h2>Career Objective</h2>
+              <p>
+                I want to work for a company which provides me the opportunity to improve my skills and and knowledge, to grow with the goals of the organization.
+              </p>
             </div>
           </div>
           <div class="row">
@@ -203,7 +211,7 @@
               <div class="timeline-item">
                 <div class="timeline-mark"></div>
                 <div class="timeline-content">
-                  <h3 class="timeline-title">Project_Shopping_Website</h3>
+                  <h3 class="timeline-title">Shopping Project</h3>
                   <p>Source:
                     <a href="https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/"><i
                         class="fa fa-star" aria-hidden="true"></i>
@@ -212,8 +220,8 @@
                       </div>
                     </a>
                   </p>
-                  <p>Description: Trang Web Bán Hàng</p>
-                  <p>Responsibilities: In this project, I participated in login, registration, BE-FE Admin</p>
+                  <p>Description: A shopping website</p>
+                  <p>Responsibilities: I did Login, Registration forms and FE-BE admin in this project</p>
                 </div>
               </div>
               <div class="timeline-item">
@@ -226,26 +234,29 @@
                     <a href="https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/"><i class="fa fa-star"
                         aria-hidden="true"></i>
                       <div class="link">
-                        https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/
+                        https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/
                       </div>
                     </a>
                   </p>
                   <p>Description: Hotel Management Software</p>
+                  <p>Responsibilities: I did  Room List, Export And Import Room</p>
+                  <p>Customer Backup and restore CDSL</p>
+                  <p>Export service usage report and usage density</p>
+                  <p>Partial Database Design</p>
                 </div>
               </div>
               <div class="timeline-item">
                 <div class="timeline-mark"></div>
                 <div class="timeline-content">
-                  <h3 class="timeline-title">Project of Learning FE</h3>
+                  <h3 class="timeline-title">Project in FE learning Course</h3>
                   <p>Source:
                     <a href="https://github.com/QuangThienSix/mino"><i class="fa fa-star" aria-hidden="true"></i>
                       <div class="link">
-                        https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/
+                        https://github.com/QuangThienSix/mino
                       </div>
                     </a>
                   </p>
-                  <p>Web FE</p>
-                  <p>Project of Learning FE</p>
+                  <p>Description: FE website</p>
                 </div>
               </div>
             </div>
