--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="col">
               <h2>Career Objective</h2>
               <p>
-                I want to work for a company which provides me the opportunity to improve my skills and and knowledge, to grow with the goals of the organization.
+                I want to work for a company which provides me the opportunity to improve my skills and knowledge to growth along with the company Objective
               </p>
             </div>
           </div>
@@ -239,10 +239,11 @@
                     </a>
                   </p>
                   <p>Description: Hotel Management Software</p>
-                  <p>Responsibilities: I did  Room List, Export And Import Room</p>
-                  <p>Customer Backup and restore CDSL</p>
-                  <p>Export service usage report and usage density</p>
-                  <p>Partial Database Design</p>
+                  <p>Responsibilities: I did  </p>
+                  <p>- Room List, Export And Import Room</p> 
+                  <p>- Customer Backup and restore CDSL</p>
+                  <p>- Export service usage report and usage density</p>
+                  <p>- Partial Database Design</p>
                 </div>
               </div>
               <div class="timeline-item">
