--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <h3 class="danhmuc">Skill</h3>
+            <h3 class="danhmuc">Skill's</h3>
             <ul class="list-group">
               <li class="list-group-item">
                 <div class="float-left">C/C++</div>
@@ -71,7 +71,7 @@
                 </div>
               </li>
               <li class="list-group-item">
-                <div class="float-left">C#/3Layer/OO  P</div>
+                <div class="float-left">C#/3Layer/OOP</div>
                 <div class="float-right">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -136,37 +136,62 @@
           <div class="row">
             <div class="col">
               <div class="vetoi mt-3">
-                <h2>About Me</h2>
-                <p>Ability to work as individual as well as in group.</p>
-                <p>Ability to work under high pressure situations</p>
-                <p>Ready to learn new technologies and methods to improve myself (or my skills)</p>
+                <h2><i class="fa fa-address-card-o" aria-hidden="true"> </i> About Me</h2>
+                <div class="content">
+                  <p>Ability to work as individual as well as in group.</p>
+                  <p>Ability to work under high pressure situations</p>
+                  <p>Ready to learn new technologies and methods to improve myself (or my skills)</p>
+                </div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h2>Career Objective</h2>
-              <p>   
-                I work from web interface development. About a while working and learning a lot of web experience.I want to develop myself as a web developer from Frontend to Backend to become Full-Stack Developer.
-              </p>
-              <p>
-                I want to work for a company which provides me the opportunity to improve my skills and knowledge to growth along with the company Objective
-              </p>
+              <h2><i class="fa fa-telegram" aria-hidden="true"> </i> Career Objective</h2>
+              <div class="content">
+                <p>
+                  I work from web interface development. About a while working and learning a lot of web experience.I
+                  want
+                  to develop myself as a web developer from Frontend to Backend to become Full-Stack Developer.
+                </p>
+                <p>
+                  I want to work for a company which provides me the opportunity to improve my skills and knowledge to
+                  growth along with the company Objective
+                </p>
+              </div>
             </div>
           </div>
-        
           <div class="row">
             <div class="col">
-              <h2>Experiences</h2>
+              <h2><i class="fa fa-book" aria-hidden="true"> </i> Education</h2>
               <div class="timeline-item">
-                <div class="timeline-info">  4/2020 -> 10/2020</div>
+                <div class="timeline-info">06/2020</div>
+                <div class="timeline-mark"></div>
+                <div class="timeline-content">
+                  <h3 class="timeline-title">College graduate</h3>
+                  <div class="content">
+                    <p>University of Science - HO CHI MINH City</p>
+                    <p>Faculty of Information Technology</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <h2><i class="fa fa-thumbs-o-up" aria-hidden="true"> </i> Experiences</h2>
+              <div class="timeline-item">
+                <div class="timeline-info"> 4/2020 -> 10/2020</div>
                 <div class="timeline-mark"></div>
                 <div class="timeline-content">
                   <h3 class="timeline-title">CÔNG TY TNHH TRUYỀN THÔNG VÀ QUẢNG CÁO SIÊU KINH DOANH</h3>
-                  <p>Website Design Staff</p>
-                  <p>
-                    From psd files I write html / css / javascript to design like psd file. and handle the functions that the customer requires. Written in company CMS with php and mysql languages. Build sales web.
-                  </p>
+                  <div class="content">
+                    <p>Website Design Staff</p>
+                    <p>
+                      From psd files I write html / css / javascript to design like psd file and handle the functions
+                      that the customer requires. Written in company CMS with php and mysql languages. Build sales web.
+                    </p>
+                  </div>
                   <div class="row">
                     <div class="col-sm-6">
                       <div class="img">
@@ -175,7 +200,7 @@
                     </div>
                     <div class="col-sm-6">
                       <div class="img">
-                        <img src="./img/sp2.png" alt="">
+                        <img src="./img/sp4.png" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6">
@@ -185,29 +210,16 @@
                     </div>
                     <div class="col-sm-6">
                       <div class="img">
-                        <img src="./img/sp4.png" alt="">
+                        <img src="./img/sp2.png" alt="">
                       </div>
-                    
+
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col">
-              <h2>Education</h2>
-              <div class="timeline-item">
-                <div class="timeline-info">06/2020</div>
-                <div class="timeline-mark"></div>
-                <div class="timeline-content">
-                  <h3 class="timeline-title">College graduate</h3>
-                  <p>University of Science - HO CHI MINH City</p>
-                  <p>Faculty of Information Technology</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
           <div class="row">
             <div class="col">
               <h2>Project In The Learning Process</h2>
@@ -215,16 +227,18 @@
                 <div class="timeline-mark"></div>
                 <div class="timeline-content">
                   <h3 class="timeline-title">Shopping Project</h3>
-                  <p>Source:
-                    <a href="https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/"><i
-                        class="fa fa-star" aria-hidden="true"></i>
-                      <div class="link">
-                        https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/
-                      </div>
-                    </a>
-                  </p>
-                  <p>Description: A shopping website</p>
-                  <p>Responsibilities: I did Login, Registration forms and FE-BE admin in this project</p>
+                  <div class="content">
+                    <p>Source:
+                      <a href="https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/"><i
+                          class="fa fa-star" aria-hidden="true"></i>
+                        <div class="link">
+                          https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/
+                        </div>
+                      </a>
+                    </p>
+                    <p>Description: A shopping website</p>
+                    <p>Responsibilities: I did Login, Registration forms and FE-BE admin in this project</p>
+                  </div>
                 </div>
               </div>
               <div class="timeline-item">
@@ -233,20 +247,22 @@
                 <div class="timeline-mark"></div>
                 <div class="timeline-content">
                   <h3 class="timeline-title">Hotel Management Software</h3>
-                  <p>Source:
-                    <a href="https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/"><i class="fa fa-star"
-                        aria-hidden="true"></i>
-                      <div class="link">
-                        https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/
-                      </div>
-                    </a>
-                  </p>
-                  <p>Description: Hotel Management Software</p>
-                  <p>Responsibilities: I did  </p>
-                  <p>- Room List, Export And Import Room</p> 
-                  <p>- Customer Backup and restore CDSL</p>
-                  <p>- Export service usage report and usage density</p>
-                  <p>- Partial Database Design</p>
+                  <div class="content">
+                    <p>Source:
+                      <a href="https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/"><i
+                          class="fa fa-star" aria-hidden="true"></i>
+                        <div class="link">
+                          https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/
+                        </div>
+                      </a>
+                    </p>
+                    <p>Description: Hotel Management Software</p>
+                    <p>Responsibilities: I did </p>
+                    <p>- Room List, Export And Import Room</p>
+                    <p>- Customer Backup and restore CDSL</p>
+                    <p>- Export service usage report and usage density</p>
+                    <p>- Partial Database Design</p>
+                  </div>
                 </div>
               </div>
               <div class="timeline-item">
