--- a/index.html
+++ b/index.html
@@ -62,15 +62,6 @@
                         <h3 class="danhmuc">Skill's</h3>
                         <ul class="list-group">
                             <li class="list-group-item">
-                                <div class="float-left">C/C++</div>
-                                <div class="float-right">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-
-                                </div>
-                            </li>
-                            <li class="list-group-item">
                                 <div class="float-left">C#/3Layer/OOP</div>
                                 <div class="float-right">
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -88,7 +79,7 @@
                                 </div>
                             </li>
                             <li class="list-group-item">
-                                <div class="float-left">HTML/CSS</div>
+                                <div class="float-left">HTML/CSS/PUG/SASS</div>
                                 <div class="float-right">
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -99,6 +90,16 @@
                             <li class="list-group-item">
                                 <div class="float-left">Java</div>
                                 <div class="float-right">
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </div>
+                            </li>
+                            <li class="list-group-item">
+                                <div class="float-left">React</div>
+                                <div class="float-right">
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
@@ -176,6 +177,25 @@
                     </div>
                     <div class="row">
                         <div class="col">
+                            <h2><i class="fa fa-thumbs-o-up" aria-hidden="true"> </i> Experiences</h2>
+                            <div class="timeline-item">
+                                <div class="timeline-info"> 4/2020 -> 10/2020</div>
+                                <div class="timeline-mark"></div>
+                                <div class="timeline-content">
+                                    <h3 class="timeline-title">CÔNG TY TNHH TRUYỀN THÔNG VÀ QUẢNG CÁO SIÊU KINH DOANH</h3>
+                                    <div class="content">
+                                        <p>Website Design Staff</p>
+                                        <p>
+                                            From psd files I write html / css / javascript to design like psd file and handle the functions that the customer requires. Written in company CMS with php and mysql languages. Build sales web.
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
                             <h2>Project In The Learning Process</h2>
                             <div class="timeline-item">
                                 <div class="timeline-mark"></div>
@@ -235,27 +255,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <h2><i class="fa fa-thumbs-o-up" aria-hidden="true"> </i> Experiences</h2>
-                            <div class="timeline-item">
-                                <div class="timeline-info"> 4/2020 -> 10/2020</div>
-                                <div class="timeline-mark"></div>
-                                <div class="timeline-content">
-                                    <h3 class="timeline-title">CÔNG TY TNHH TRUYỀN THÔNG VÀ QUẢNG CÁO SIÊU KINH DOANH</h3>
-                                    <div class="content">
-                                        <p>Website Design Staff</p>
-                                        <p>
-                                            From psd files I write html / css / javascript to design like psd file and handle the functions that the customer requires. Written in company CMS with php and mysql languages. Build sales web.
-                                        </p>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
 
                 </div>
             </div>
