--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img src="./img/avata1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h1 class="card-title">Quang Thiện</h1>
-                        <h3 class="text-center mb-0">Web Developer</h3>
+                        <h3 class="text-center mb-0">Front End Developer</h3>
                         <p class="card-text"></p>
                         <ul class="list-inline social">
                             <li class="list-inline-item">
@@ -47,12 +47,16 @@
                     <div class="col">
                         <h3 class="danhmuc">Contact Information</h3>
                         <ul class="list-group">
-                            <li class="list-group-item"><i class="fa fa-envelope" aria-hidden="true"></i> phamquangthien.it@gmail.com
+                            <li class="list-group-item"><i class="fa fa-envelope" aria-hidden="true"></i>
+                                phamquangthien.it@gmail.com
                             </li>
-                            <li class="list-group-item"><i class="fa fa-phone-square" aria-hidden="true"></i> 0909123144</li>
-                            <li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i> Gò Vấp, Tp.Hồ Chí Minh
+                            <li class="list-group-item"><i class="fa fa-phone-square" aria-hidden="true"></i> 0909123144
                             </li>
-                            <li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i> 13/07/1995</li>
+                            <li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i> Gò Vấp,
+                                Tp.Hồ Chí Minh
+                            </li>
+                            <li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i> 13/07/1995
+                            </li>
                             <li class="list-group-item"><i class="fa fa-user-circle" aria-hidden="true"></i> Male</li>
                         </ul>
                     </div>
@@ -61,7 +65,7 @@
                     <div class="col">
                         <h3 class="danhmuc">Skill's</h3>
                         <ul class="list-group">
-                            <li class="list-group-item">
+                            <!-- <li class="list-group-item">
                                 <div class="float-left">C#/3Layer/OOP</div>
                                 <div class="float-right">
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -69,9 +73,9 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
-                            </li>
+                            </li> -->
                             <li class="list-group-item">
-                                <div class="float-left">PHP/NodeJS</div>
+                                <div class="float-left">NodeJS</div>
                                 <div class="float-right">
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -85,14 +89,6 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
 
-                                </div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="float-left">Java</div>
-                                <div class="float-right">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
                             </li>
                             <li class="list-group-item">
@@ -151,10 +147,13 @@
                             <h2><i class="fa fa-telegram" aria-hidden="true"> </i> Career Objective</h2>
                             <div class="content">
                                 <p>
-                                    I work from web interface development. About a while working and learning a lot of web experience.I want to develop myself as a web developer from Frontend to Backend to become Full-Stack Developer.
+                                    I work from web interface development. About a while working and learning a lot of
+                                    web experience.I want to develop myself as a web developer from Frontend to Backend
+                                    to become Full-Stack Developer.
                                 </p>
                                 <p>
-                                    I want to work for a company which provides me the opportunity to improve my skills and knowledge to growth along with the company Objective
+                                    I want to work for a company which provides me the opportunity to improve my skills
+                                    and knowledge to growth along with the company Objective
                                 </p>
                             </div>
                         </div>
@@ -182,75 +181,46 @@
                                 <div class="timeline-info"> 4/2020 -> 10/2020</div>
                                 <div class="timeline-mark"></div>
                                 <div class="timeline-content">
-                                    <h3 class="timeline-title">CÔNG TY TNHH TRUYỀN THÔNG VÀ QUẢNG CÁO SIÊU KINH DOANH</h3>
+                                    <h3 class="timeline-title">CÔNG TY TNHH TRUYỀN THÔNG VÀ QUẢNG CÁO SIÊU KINH DOANH
+                                    </h3>
                                     <div class="content">
                                         <p>Website Design Staff</p>
                                         <p>
-                                            From psd files I write html / css / javascript to design like psd file and handle the functions that the customer requires. Written in company CMS with php and mysql languages. Build sales web.
+                                            From psd files I write html / css / javascript to design like psd file and
+                                            handle the functions that the customer requires. Written in company CMS with
+                                            php and mysql languages. Build sales web.
                                         </p>
                                     </div>
 
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <h2>Project In The Learning Process</h2>
                             <div class="timeline-item">
+                                <div class="timeline-info">10/2020 -> 3/2021</div>
                                 <div class="timeline-mark"></div>
                                 <div class="timeline-content">
-                                    <h3 class="timeline-title">Shopping Project</h3>
+                                    <h3 class="timeline-title">CÔNG TY TNHH MEKONG</h3>
                                     <div class="content">
-                                        <p>Source:
-                                            <a href="https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/"><i
-                          class="fa fa-star" aria-hidden="true"></i>
-                        <div class="link">
-                          https://bitbucket.org/tranquoctrung1/project_shopping_website/src/master/
-                        </div>
-                      </a>
+                                        <p>Project Inn management</p>
+                                        <p>
+                                            Create a website for customers to create motel rooms and customers to rent
+                                            rooms. the project does reactjs redux redux-saga. in the project i do both
+                                            FE and BE .
                                         </p>
-                                        <p>Description: A shopping website</p>
-                                        <p>Responsibilities: I did Login, Registration forms and FE-BE admin in this project</p>
                                     </div>
+
                                 </div>
                             </div>
                             <div class="timeline-item">
-
-
                                 <div class="timeline-mark"></div>
                                 <div class="timeline-content">
-                                    <h3 class="timeline-title">Hotel Management Software</h3>
+                                    <h3 class="timeline-title">CÔNG TY TNHH SHINHAN DS VIET NAM</h3>
                                     <div class="content">
-                                        <p>Source:
-                                            <a href="https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/"><i
-                          class="fa fa-star" aria-hidden="true"></i>
-                        <div class="link">
-                          https://bitbucket.org/phamquangthien/ltudql_2017_ck3_03/src/master/
-                        </div>
-                      </a>
+                                        <p>FRONT END</p>
+                                        <p>
+                                            MAKING INTERFACES WITH ANGULAR
                                         </p>
-                                        <p>Description: Hotel Management Software</p>
-                                        <p>Responsibilities: I did </p>
-                                        <p>- Room List, Export And Import Room</p>
-                                        <p>- Customer Backup and restore CDSL</p>
-                                        <p>- Export service usage report and usage density</p>
-                                        <p>- Partial Database Design</p>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="timeline-item">
-                                <div class="timeline-mark"></div>
-                                <div class="timeline-content">
-                                    <h3 class="timeline-title">Project in FE learning Course</h3>
-                                    <p>Source:
-                                        <a href="https://github.com/QuangThienSix/mino"><i class="fa fa-star" aria-hidden="true"></i>
-                      <div class="link">
-                        https://github.com/QuangThienSix/mino
-                      </div>
-                    </a>
-                                    </p>
-                                    <p>Description: FE website</p>
+
                                 </div>
                             </div>
                         </div>
