--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <div class="row">
         <div class="col-md-4 col-xl-3 mt-3">
           <div class="card">
-            <img src="./img/avata1.png" class="card-img-top" alt="..." />
+            <img src="./img/thienCV.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h1 class="card-title">Quang Thiện</h1>
-              <h3 class="text-center mb-0">Front End Developer</h3>
+              <h1 class="card-title">Quang Thien</h1>
+              <h3 class="text-center mb-0">Junior Developer</h3>
               <p class="card-text"></p>
               <ul class="list-inline social">
                 <li class="list-inline-item">
@@ -70,18 +70,18 @@
                 </li>
                 <li class="list-group-item">
                   <i class="fa fa-phone-square" aria-hidden="true"></i>
-                  0909123144
+                  (+84) 909123144
                 </li>
                 <li class="list-group-item">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i> Gò Vấp,
-                  Tp.Hồ Chí Minh
+                  <i class="fa fa-map-marker" aria-hidden="true"></i> Go Vap
+                  District, Ho Chi Minh City
                 </li>
-                <li class="list-group-item">
+                <!-- <li class="list-group-item">
                   <i class="fa fa-calendar" aria-hidden="true"></i> 13/07/1995
                 </li>
                 <li class="list-group-item">
                   <i class="fa fa-user-circle" aria-hidden="true"></i> Male
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -99,7 +99,7 @@
                                 </div>
                             </li> -->
                 <li class="list-group-item">
-                  <div class="float-left">NodeJS/Java</div>
+                  <div class="float-left">NodeJS/Java/JavaScript</div>
                   <!-- <div class="float-right">
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -116,7 +116,9 @@
                                 </div> -->
                 </li>
                 <li class="list-group-item">
-                  <div class="float-left">React/Angular</div>
+                  <div class="float-left">
+                    React/Angular+/Redux/Redux Toolkit
+                  </div>
                   <!-- <div class="float-right">
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -132,6 +134,9 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div> -->
+                </li>
+                <li class="list-group-item">
+                  <div class="float-left">Git</div>
                 </li>
               </ul>
             </div>
@@ -197,68 +202,137 @@
                   <i class="fa fa-thumbs-o-up" aria-hidden="true"> </i>
                   Experiences
                 </h2>
+
                 <div class="timeline-item">
-                  <div class="timeline-info">4/2020 -> 3/2021</div>
+                  <div class="timeline-mark"></div>
+                  <div class="timeline-content">
+                    <h3 class="timeline-title">SHINHAN DS VIETNAM CO., LTD</h3>
+                    <h5>3/2021</h5>
+                    <div class="content">
+                      <p>OMS Application</p>
+                      <p>Recon, Auto-debit, FCL</p>
+                      <p>Get data from BE to FE and show it in the table</p>
+                      <p>
+                        Process records to be sent from LMS and other Banks to
+                        BE
+                      </p>
+                      <p>
+                        Call data from BE to get report data to export to excel
+                        files
+                      </p>
+                      <p>
+                        Filter data data called from BE to make it easy for
+                        users to filter data
+                      </p>
+                      <p>
+                        Technologies Used: Angular 10 , PrimeNG , PDF,
+                        Bootstrap, Font-awesome, Pagination, Lazyload, Design
+                        PDF files to park data
+                      </p>
+                      <p>FMS Application</p>
+                      <p>Get data from BE to FE and show it in the table</p>
+                      <p>Step by step pages to complete a flow, check case</p>
+                      <p>Design PDF files to park data</p>
+                      <p>Create a form to create new cases call down BE</p>
+                      <p>
+                        Create Metada Master to check the correct data sent to
+                        BE
+                      </p>
+                      <p>
+                        Process records to be sent from LMS and other Banks to
+                        BE
+                      </p>
+                      <p>
+                        Process files from WYSIWYG data to send to BE save the
+                        file, then get dettail file data and show data to ui
+                      </p>
+                      <p>
+                        Technologies Used: Angular 10 , PrimeNG , PDF,
+                        Bootstrap, Font-awesome, Pagination, Lazyload, Design
+                        PDF files to park data,WYSIWYG
+                      </p>
+                      <p>
+                        2 project 3 member 1 BA 1 FE 1 BE : I am FE in the
+                        project
+                      </p>
+                      <p>ZNS Application</p>
+                      <p>
+                        Let the user enter the contract number and cmnd to check
+                        if the data is correct, use reCaptcha to call BE and
+                        view the loan contract
+                      </p>
+                      <p>
+                        Technologies Used: Bootstrap, Font-awesome, Spring-boot,
+                        Spring-MVC, Thymeleaf
+                      </p>
+                      <p>
+                        Project 2 member : I designed 2 pages 1 form to enter
+                        SHD and ID card. 1 page to see details of contracts, Use
+                        reCaptcha to check before calling BE
+                      </p>
+                      <p>Call BE to get PDF contract files for users</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="timeline-item">
+                  <div class="timeline-info"></div>
                   <div class="timeline-mark"></div>
                   <div class="timeline-content">
                     <h3 class="timeline-title">
-                      CÔNG TY TNHH TRUYỀN THÔNG VÀ QUẢNG CÁO SIÊU KINH DOANH
+                      SIEU KINH DOANH ADVERTISING AND MEDIA COMPANY LIMITED
                     </h3>
+                    <h5>4/2020 -> 3/2021</h5>
                     <div class="content">
-                      <p>Website Design Staff and Project Inn management</p>
+                      <p>Convert from PSD files to JS HTML and JS</p>
+                      <p>Technologies Used: Php JS HTML CSS Jquery Ajax</p>
                       <p>
                         From psd files I write html / css / javascript to design
                         like psd file and handle the functions that the customer
                         requires. Written in company CMS with php and mysql
                         languages. Build sales web.
                       </p>
-                      <p>
-                        Create a website for customers to create motel rooms and
-                        customers to rent rooms. the project does reactjs redux
-                        redux-saga. in the project i do both FE and BE .
-                      </p>
                     </div>
-                  </div>
-                </div>
-                <div class="timeline-item">
-                  <!-- <div class="timeline-info">10/2020 -> 3/2021</div> -->
-                  <!-- <div class="timeline-mark"></div> -->
-                  <div class="timeline-content">
                     <div class="content">
-                      <!-- <p>Project Inn management</p> -->
+                      <p>Room manager , Landlords and Tenants</p>
+                      <p>
+                        Technologies Used: React, Redux , Redux-saga, JWT,
+                        Server express,TypeScript, MongoDB
+                      </p>
+                      <p>
+                        Design Pages, Create form room , Upload img, Login
+                        ,Resgister, Authenticate
+                      </p>
+                      <p>2 member project. I am in charge of the front end</p>
                     </div>
                   </div>
                 </div>
                 <div class="timeline-item">
+                  <div class="timeline-info"></div>
                   <div class="timeline-mark"></div>
                   <div class="timeline-content">
-                    
                     <h3 class="timeline-title">
-                      CÔNG TY TNHH SHINHAN DS VIET NAM
+                      PERSONAL PROJECT OR SELF-STUDY
                     </h3>
-                    <h5>3/2021 -> Now</h5>
                     <div class="content">
-                      <p>FRONT END</p>
                       <p>
-                        MAKING INTERFACES WITH ANGULAR, build an OMS and FMS
-                        application
-                      </p>
-                      <p>Handle login with access token and refresh token.</p>
-                      <p>
-                        Call BE to get the data, process the json data, display
-                        it on the screen, process the wysiwyg with the file.
+                        Link GitHub:
+                        https://github.com/QuangThienSix?tab=repositories
                       </p>
                       <p>
-                        Create form data dump form handle form to call with BE
+                        Web projects: Blog-Cook, Online-Auction, Selling
+                        cosmetics
                       </p>
-                      <p>Filter data, search data</p>
-                      <p>Design PDF files to park data</p>
-                      <p>BACK END</p>
-                      <p>Work with Spring-boot and Oracle Database</p>
                       <p>
-                        Create an api that collects data from los to store data
-                        in the database. then create APIs to get data or execute
-                        record. file handling
+                        Technologies Used: HTML PUG CSS SASS & JavaScript
+                        TypeScript
+                      </p>
+                      <p>
+                        React React-Toolkit Redux, Build Server Express, JWT ,
+                        SQL , Send Mail OTP, RESTful API, Material-UI,
+                        PrimeFaces – Ultimate UI Framework, Bootstrap 4,5, Axios
+                        ,Font-awesome 4.7,5, Form-Hook, Angular +, Jquery and
+                        Ajax
                       </p>
                     </div>
                   </div>
